--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Search requests</h1>
+    <h1>Search requests [ULPR]</h1>
     <div class="container">
         <div id="counterLinesContent" class="content">
             <div class="stats-container">
@@ -84,7 +84,7 @@
         <input type="file" id="fileInput" style="display:none">
     </div>
     <div id="dropOverlay">Drop file to upload</div>
-    <div class="footer">[BETA] Version: 27.08.2025 | Copyright © 2025 by ulpr</div>
+    <div class="footer">[BETA] Version: 15.09.2025 | Copyright © 2025 by ulpr</div>
 
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
@@ -92,3 +92,4 @@
     <script src="js/search.js"></script>
 </body>
 </html>
+
