--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                             </div>
                             <div class="settings-col">
                                 <label class="settings-checkbox">
+                                    <input type="checkbox" id="loginpass">
+                                    <span>login:pass</span>
+                                </label>
+                            </div>
+                            <div class="settings-col">
+                                <label class="settings-checkbox">
+                                    <input type="checkbox" id="mailpass">
+                                    <span>mail:pass</span>
+                                </label>
+                            </div>
+                            <div class="settings-col">
+                                <label class="settings-checkbox">
                                     <input type="checkbox" id="caseSensitive">
                                     <span>Case-sensitive</span>
                                 </label>
@@ -84,7 +96,7 @@
         <input type="file" id="fileInput" style="display:none">
     </div>
     <div id="dropOverlay">Drop file to upload</div>
-    <div class="footer">[BETA] Version: 30.10.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
+    <div class="footer">[BETA] Version: 04.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
 
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
@@ -92,4 +104,3 @@
     <script src="js/search.js"></script>
 </body>
 </html>
-
