--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                                     <img class="search-icon" src="img/search.svg" alt="/" draggable="false">
                                 </div>
                             </div>
+                            <div id="historyDropdown" class="history-dropdown"></div>
                         </div>
                     </div>
                     <div class="stat-row">
@@ -96,7 +97,7 @@
         <input type="file" id="fileInput" style="display:none">
     </div>
     <div id="dropOverlay">Drop file to upload</div>
-    <div class="footer">[BETA] Version: 12.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
+    <div class="footer">[BETA] Version: 13.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
 
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
@@ -104,5 +105,4 @@
     <script src="js/search.js"></script>
 </body>
 </html>
-
 
