--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="stat-row">
                         <div class="stat-label">Request</div>
                         <div class="stat-value-grid request-grid" id="requestCell">
-                            <input id="requestInput" type="text" placeholder="Enter your request" autocomplete="off" spellcheck="false">
+                            <input id="requestInput" type="text" placeholder="request1|request2|request3..." autocomplete="off" spellcheck="false">
                             <div class="actions">
                                 <div id="searchButton" class="action-icon search-button" title="Search">
                                     <img class="search-icon" src="img/search.svg" alt="/" draggable="false">
@@ -97,7 +97,7 @@
         <input type="file" id="fileInput" style="display:none">
     </div>
     <div id="dropOverlay">Drop file to upload</div>
-    <div class="footer">[BETA] Version: 13.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
+    <div class="footer">[BETA] Version: 14.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
 
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
@@ -105,4 +105,3 @@
     <script src="js/search.js"></script>
 </body>
 </html>
-
