--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="settings-col">
                                 <label class="settings-checkbox">
                                     <input type="checkbox" id="mailpass">
-                                    <span>mail:pass</span>
+                                    <span>email:pass</span>
                                 </label>
                             </div>
                             <div class="settings-col">
@@ -97,7 +97,7 @@
         <input type="file" id="fileInput" style="display:none">
     </div>
     <div id="dropOverlay">Drop file to upload</div>
-    <div class="footer">[BETA] Version: 14.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
+    <div class="footer">[BETA] Version: 18.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
 
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
