--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
     <div class="footer">[BETA] Version: 18.11.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2025 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
 
     <script src="js/resolution.js"></script>
+    <script src="js/download-results.js"></script>
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
     <script src="js/drag-and-drop.js"></script>
     <script src="js/search.js"></script>
 </body>
 </html>
+
 
