--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
     <script src="js/resolution.js"></script>
     <script src="js/download-results.js"></script>
     <script src="js/history.js"></script>
+    <script src="js/filters.js"></script>
     <script src="js/state.js"></script>
     <script src="js/uploads.js"></script>
     <script src="js/drag-and-drop.js"></script>
     <script src="js/search.js"></script>
 </body>
 </html>
+
