--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="stat-row">
                         <div class="stat-label">Settings</div>
                         <div id="Settings" class="stat-value">
-                            <div class="settings-col">
+                            <div class="settings-col" title="Show file names when searching for files from a folder">
                                 <label class="settings-checkbox">
                                     <input type="checkbox" id="showFileNames">
                                     <span>Debug mode</span>
@@ -97,7 +97,7 @@
         <input type="file" id="fileInput" style="display:none">
     </div>
     <div id="dropOverlay">Drop file to upload</div>
-    <div class="footer">[BETA] Version: 17.12.2025 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2026 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
+    <div class="footer">[BETA] Version: 16.02.2026 | <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Copyright</a> © 2026 by <a href="https://github.com/ulpr/ulpr.github.io/" target="_blank">ULPR</a></div>
 
     <script src="js/download-results.js"></script>
     <script src="js/history.js"></script>
@@ -108,3 +108,4 @@
     <script src="js/search.js"></script>
 </body>
 </html>
+
